# nonebot-plugin-maimaidx

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_maimaidx/: config.py
nonebot_plugin_maimaidx/command/: __init__.py  mai_b50.py  mai_guess.py  mai_score.py  mai_table.py
nonebot_plugin_maimaidx/libraries/: maimaidx_best_50.py  maimaidx_music.py  maimaidx_player_score.py
