[project]
name = "test-bot"
version = "0.1.0"
description = "test-bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

dependencies = [
    "nonebot2<3.0.0,>=2.0.0",
    "nonebot-adapter-onebot<3.0.0,>=2.2.2",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
    "aiofiles<24.0.0,>=23.2.1",
    "httpx<1.0.0,>=0.23.1",
    "pillow<11.0.0,>=10.0.0",
    "pydantic<2.0.0,>=1.10.13",
    "pyecharts<3.0.0,>=2.0.0",
    "snapshot_phantomjs<1.0.0,>=0.0.1"
]

[tool.setuptools.package-data]
"*" = ["maimaidxhelp.png"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_maimaidx"]
plugin_dirs = []
builtin_plugins = []
